syntax = "proto3";

package demo;

option go_package = "demo/proto";

message User {
  string name = 1; // имя пользователя
  enum Sex {
    UNSPECIFIED = 0;
    MALE = 1;
    FEMALE = 2;
  }

  Sex sex = 2;
  string email = 3;
  // (1) добавьте поля для пола и email
}

message AddUserRequest {
  User user = 1;
}

message AddUserResponse {
  string error = 1; // ошибка
}

message ListUsersRequest {
  int32 offset = 1; // смещение выборки
  int32 limit = 2;  // количество элементов
}

message ListUsersResponse {
  int32 count = 1; // общее количество пользователей
  // (2) добавьте поле для списка email
  repeated string emails = 3;
}

message GetUserRequest {
  string email = 1;
}

message GetUserResponse {
  User   user = 1;
  string error = 2;
}

// (3) добавьте DelUserRequest
message DelUserRequest {
  string email = 1;
}

message DelUserResponse {
  string error = 1;
}

service Users {
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc DelUser(DelUserRequest) returns (DelUserResponse);
  // (4) добавьте интерфейс DelUser
}

